--- a/Demo/WechatMiniProgram/project.config.json
+++ b/Demo/WechatMiniProgram/project.config.json
@@ -4,7 +4,7 @@
         "ignore": []
     },
     "setting": {
-        "urlCheck": true,
+        "urlCheck": false,
         "es6": true,
         "enhance": false,
         "postcss": true,
@@ -21,6 +21,8 @@
         "checkSiteMap": true,
         "uploadWithSourceMap": true,
         "compileHotReLoad": false,
+        "useMultiFrameRuntime": false,
+        "useApiHook": true,
         "babelSetting": {
             "ignore": [],
             "disablePlugins": [],
@@ -31,9 +33,7 @@
         "userConfirmedUseCompilerModuleSwitch": false,
         "packNpmManually": false,
         "packNpmRelationList": [],
-        "minifyWXSS": true,
-        "useMultiFrameRuntime": false,
-        "useApiHook": true
+        "minifyWXSS": true
     },
     "compileType": "miniprogram",
     "libVersion": "2.12.2",
