--- a/Source/NaiveNetServer/Java/.classpath
+++ b/Source/NaiveNetServer/Java/.classpath
@@ -3,12 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/json.jar"/>
-	<classpathentry kind="lib" path="lib/netty-all-4.1.52.Final-javadoc.jar"/>
-	<classpathentry kind="lib" path="lib/netty-all-4.1.52.Final-sources.jar"/>
-	<classpathentry kind="lib" path="lib/netty-all-4.1.52.Final.jar" sourcepath="lib/netty-all-4.1.52.Final-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/NaiveNet2.0/lib/netty-all-4.1.52.Final-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/netty-all-4.1.52.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
