--- a/Source/NaiveNetServer/Java/NaiveNetConfig.json
+++ b/Source/NaiveNetServer/Java/NaiveNetConfig.json
@@ -1,9 +1,9 @@
 {
 	"SSL_JKS_FILEPATH":"",
-	"SSL_PASSWORD_FILEPATH":"F:\\NaiveNet\\Source\\NaiveNet\\ssl\\keystorePass.txt",
+	"SSL_PASSWORD_FILEPATH":"",
 	"SERVER_PORT":1000,
 	"USER_BREAK_TIMEOUT":11000,
 	"USER_QUIT_TIMEOUT":600000,
 	"USER_AUTH_TIMEOUT":5000,
-	"SECRET":"3d5e0d17cf7b65e5c5f25be"
+	"SECRET":""
 }
