--- a/Source/NaiveNetChannel/Java2_0/.classpath
+++ b/Source/NaiveNetChannel/Java2_0/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/json.jar"/>
 	<classpathentry kind="lib" path="lib/netty-all-4.1.52.Final.jar" sourcepath="lib/netty-all-4.1.52.Final-sources.jar">
 		<attributes>
